--- a/Site/style.css
+++ b/Site/style.css
@@ -13,8 +13,8 @@ html {
   height: 500vh;
 }
 
-p {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+h4 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 h2 {
@@ -101,7 +101,7 @@ header ul li a {
   width: 800px;
 }
 
-.pal p {
+.pal h4 {
   color: rgb(0, 0, 0);
   text-align: right;
   margin-right: 16.4em;
@@ -211,26 +211,36 @@ header ul li a {
   text-align: CENTER;
 }
 
+.encontre h1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
 .encontre {
-  margin-top: 10px;
+  margin-top: 0em;
   margin: 30px;
   text-align: CENTER;
-  font-size: 2em;
+  font-size: 26px;
 }
 
 .pesquisar img {
-  margin-left: 10em;
+  margin-left: 12em;
 }
 
 .pesq {
-  margin-left: 8em;
+  margin-left: 10em;
   color: black;
 }
 
 .bnt-pesquisa2 button {
-  margin-top: 50px;
-  margin-left: 12em;
-  color: pink;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  padding: 21px 41px;
+  border: 1px solid;
+  border-radius: 6px;
+  vertical-align: middle;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  font-size: 1em;
 }
 
 .tesla {
@@ -242,30 +252,48 @@ header ul li a {
   text-align: center;
 }
 
-.bnt-pesquisar {
-  text-align: center;
-}
-
 .bnt-pesquisar button {
-  color: aqua;
+  margin-left: 15em;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 1em;
+  padding: 21px 40px;
+  border: 1px solid;
+  border-radius: 6px;
+  vertical-align: middle;
+  color: black;
+  text-decoration: none;
 }
 
 .confg {
-  margin-top: -8em;
-  margin-right: 10em;
+  margin-top: -6em;
+  margin-right: 12em;
   text-align: right;
 }
 
 .confgt {
-  margin-right: 8em;
+  margin-right: 10em;
   text-align: right;
 }
 
+tr td {
+  display: inline-block;
+  margin: 60px 65px;
+}
+
 .bnt-conf {
-  color: aqua;
-  margin-top: 50px;
-  text-align: right;
-  margin-right: 8em;
+  margin-right: 0em;
+  float: right;
+}
+
+.bnt-conf button {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  padding: 21px 41px;
+  border: 1px solid;
+  border-radius: 6px;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: 1em;
+  color: black;
 }
 
 .btn-contato button {
