--- a/Site/style.css
+++ b/Site/style.css
@@ -64,13 +64,21 @@ header ul li a {
   text-decoration: none;
 }
 
-.self {
+.temp {
   height: 100vh;
   background-image: url(templete.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
+}
+
+.temp h1 {
+  font-style: oblique;
+  margin-left: 70px;
+  margin-top: 1.8em;
+  font-size: 7em;
+  color: rgb(218, 213, 213);
 }
 
 .titu h2 {
@@ -80,7 +88,7 @@ header ul li a {
   margin: 20px;
 }
 
-.meio p {
+.meio h4 {
   font-size: 15px;
   text-align: center;
   margin: 50px;
@@ -97,53 +105,40 @@ header ul li a {
 
 .jeep img {
   margin: 5px;
-  position: static;
   width: 800px;
 }
 
 .pal h4 {
   color: rgb(0, 0, 0);
   text-align: right;
-  margin-right: 16.4em;
+  margin-right: 16.5em;
   font-size: 1em;
   margin-top: 60px;
 }
 
 .ov img {
-  width: 30px;
-  height: 30px;
   margin-top: -1.8em;
   position: absolute;
   right: 29.5em;
 }
 
-.self h1 {
-  font-style: oblique;
-  margin-left: 70px;
-  margin-top: 1.8em;
-  font-size: 7em;
-  color: rgb(218, 213, 213);
-}
-
-.tet {
-  text-align: right;
-  margin-top: 50px;
-  margin-right: 18em;
-}
-
 .teto img {
-  width: 30px;
-  height: 30px;
   margin-top: -1.5em;
   position: absolute;
   right: 29.5em;
 }
 
-.dps {
+.tet {
+  text-align: right;
+  margin-top: 50px;
+  margin-right: 17.5em;
+}
+
+.mult {
   color: black;
   text-align: right;
   margin-top: 50px;
-  margin-right: 14em;
+  margin-right: 13.5em;
 }
 
 .os img {
@@ -158,7 +153,7 @@ header ul li a {
   color: black;
   text-align: right;
   margin-top: 50px;
-  margin-right: 13em;
+  margin-right: 12.7em;
 }
 
 .aro img {
@@ -173,41 +168,32 @@ header ul li a {
   background-color: silver;
 }
 
-.bnt-comprar button {
-  width: 170px;
-  height: 50px;
-  border: 0;
-  background-color: rgb(110, 110, 110);
-  color: whitesmoke;
-  cursor: pointer;
-  transition: 0.2s;
-  padding: 0.75rem 1.25rem;
-  border-radius: 10rem;
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  margin-left: 73em;
-  margin-top: 5em;
+.bnt-comprar {
+  text-align: right;
+  margin-top: 3em;
+  margin-right: 12em;
 }
 
-.copo {
-  background-color: silver;
+.bnt-comprar button {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 1em;
+  width: 170px;
+  height: 50px;
+  border: none;
+  cursor: pointer;
 }
 
 .cuper {
-  text-align: right;
-  margin-top: 9em;
-}
-
-.cuper img {
-  position: static;
-  width: 800px;
+  background-image: url(mini\ cuper.jpg);
+  height: 105vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
 }
 
 .KK {
-  margin: 30PX;
+  margin-top: 60px;
   text-align: CENTER;
 }
 
@@ -216,18 +202,18 @@ header ul li a {
 }
 
 .encontre {
-  margin-top: 0em;
-  margin: 30px;
+  margin: 60px;
   text-align: CENTER;
   font-size: 26px;
 }
 
 .pesquisar img {
-  margin-left: 12em;
+  margin-left: 20.5em;
 }
 
 .pesq {
-  margin-left: 10em;
+  margin-top: 2em;
+  margin-left: 19em;
   color: black;
 }
 
@@ -241,14 +227,16 @@ header ul li a {
   color: black;
   text-align: center;
   font-size: 1em;
+  cursor: pointer;
 }
 
 .tesla {
-  margin-top: -5.7em;
+  margin-top: -7.7em;
   text-align: center;
 }
 
 .teslat {
+  margin-top: 2em;
   text-align: center;
 }
 
@@ -262,17 +250,23 @@ header ul li a {
   vertical-align: middle;
   color: black;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .confg {
-  margin-top: -6em;
-  margin-right: 12em;
+  margin-top: -7.8em;
+  margin-right: 19em;
   text-align: right;
 }
 
 .confgt {
-  margin-right: 10em;
+  margin-top: 2em;
+  margin-right: 17em;
   text-align: right;
+}
+
+tr {
+  list-style: none;
 }
 
 tr td {
@@ -286,6 +280,7 @@ tr td {
 }
 
 .bnt-conf button {
+  cursor: pointer;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   padding: 21px 41px;
   border: 1px solid;
